# WabiSabi-VoiceAI

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
.next/: app-build-manifest.json  trace
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
.next/server/app/voice/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/: layout.js  page.js
.next/static/css/app/: layout.css
.next/static/webpack/: webpack.2e34d408781598db.hot-update.js  webpack.e85e171e30b1590f.hot-update.js
.next/static/webpack/app/: layout.2e34d408781598db.hot-update.js
.next/types/app/: layout.ts  page.ts
.next/types/app/voice/: page.ts
app/: globals.css  layout.tsx  page.tsx
app/voice/: page.tsx
app/workspace/: page.tsx
app/workspace/transcripts/: page.tsx
backend/: .env.example  .gitignore  README.md  ingest_kb.py  main.py  pyproject.toml  rag.py  requirements.txt
backend/knowledge_base/: README.md
components/: AuthForm.tsx  AuthVisual.tsx  ControlBar.tsx  SessionActions.tsx  VoiceStage.tsx  WaveformVisualizer.tsx
lib/: session-store.ts  use-voice-session.ts
(+3 files in other folders)
