[project]
name = "vox-live-rag-backend"
version = "0.1.0"
description = "FastAPI gateway for Vox, Gemini Live, and local RAG"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "google-genai>=1.16.0,<2.0.0",
  "chromadb>=0.5.0,<1.0.0",
  "fastembed>=0.4.0,<1.0.0",
  "pdfminer.six>=20240706",
  "cachetools>=5.3.0,<6.0.0",
  "python-dotenv>=1.0.1,<2.0.0"
]

[tool.uv]
package = false
